예제 문제 2번 수정 >>>> th 태그로 수정 예제 17~19 생성 예제 문제 3번 생성

--- a/HTML/question/q3.html
+++ b/HTML/question/q3.html
@@ -19,6 +19,7 @@
     </style>
   </head>
   <body>
+    <header><img src="../../images/top (2).jpg" width="100%"></header>
     <blockquote>
       <h1>탐라국 입춘굿</h1>
       <p>
