--- a/HTML/question/q3.html
+++ b/HTML/question/q3.html
@@ -16,18 +16,23 @@
             text-align: center;
 
         }
+        div{
+            padding-left: 15%;
+            padding-right: 15%;
+        }
     </style>
   </head>
   <body>
     <header><img src="../../images/top (2).jpg" width="100%"></header>
-    <blockquote>
+    <div>
       <h1>탐라국 입춘굿</h1>
       <p>
         탐라국 입춘굿놀이는 전국적으로 유일하게 입춘날 벌어지는 축제이자
         제주도의 문화축제 중에서 유일하게 전통시대부터 존재했던 축제이다.</p><p>제주에서
         입춘은 새철 드는 날.<br />신구간이 끝나 하늘의 1만8000신이 지상으로
         내려와 새해 일들을 시작하는 때다.
-      </p>
+    </p>
+    자세한 정보 보기
       <h3>일정</h3>
       <ul>
         <b>
@@ -64,6 +69,6 @@
             </tr>
         </tbody>
       </table>
-    </blockquote>
+    </div>
   </body>
 </html>
