예제 3번 div id 추가 스타일 속성 변경

--- a/HTML/question/q3.html
+++ b/HTML/question/q3.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        table, td, tr{
+        table, td, th{
             border: 1px solid;
             border-collapse: collapse;
         }
-        th,tr,td{
+        th,td{
             padding: 10px;
         }
         th{
             text-align: center;
 
         }
-        div{
-            padding-left: 15%;
-            padding-right: 15%;
+        #container{
+            width: 800px;
+            margin: 0 auto;
         }
     </style>
   </head>
   <body>
     <header><img src="../../images/top (2).jpg" width="100%"></header>
-    <div>
+    <div id="container">
       <h1>탐라국 입춘굿</h1>
       <p>
         탐라국 입춘굿놀이는 전국적으로 유일하게 입춘날 벌어지는 축제이자
