예제 24번 생성 예제 문제 q4 생성

--- a/HTML/24_a_href.html
+++ b/HTML/24_a_href.html
@@ -23,6 +23,9 @@
   </head>
   <body>
     <div id="container">
+        <div>
+            <p><a href="order.html"><img src="../images/tangerines.jpg" alt="red"></a></p>
+          </div>
       <!-- <ol></ol> : order list , 순서있는 리스트 -->
       <h2>블루베리 샐러드 레시피</h2>
 
@@ -57,7 +60,11 @@
         src="https://recipe1.ezmember.co.kr/cache/recipe/2022/06/23/e77f6ec12aeff19443adabf6eef7d7661.jpg"
         width="250px"
       />
-      <hr />
+      <hr>
+      <div>
+        <p><a href="order.html" target="_blank">주문서 작성하기</a></p>
+      </div>
+      <hr>
       <video src="../medias/salad.mp4" controls width="700"></video>
       <h2>상품 구성</h2>
       <table>
