예제 재등록

--- a/HTML/05_Strong.html
+++ b/HTML/05_Strong.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- pc와 모바일 설정? -->
     <title>상품 소개 페이지</title>
 </head>
 <body>
-
-    <!-- </b>는 글씨 굵기의 의미 bold
-    <strong></strong>은 중요내용을 강조 -->
+    <!-- 
+        <b></b> 는 bold로 글자를 굵게
+        <strong></strong>은 중요 내용을 강조 
+    -->
     <h1>레드향</h1>
-    <b><p>운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에 병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류 품종이다.</p>
-    </b><p><strong>보통 '귤'이라고 부르는 감귤과 모양이 비슷하지만 크기가 더 크고 색이 붉어 레드향이란 이름이 지어졌다.</p>
-    </strong><p>껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는 어린이와 나이 많은 노인들에게 안성맞춤인 품종이다.</p>
-    <blockquote>수확 시기는 11~4월으로 그때만 맛볼 수 있다.<br>[2] 제주도에서 레드향 수확시기는 12월말에서 1월 초이다. 11월과 12월 초에 수확하는 경우 산도가 높고 당도가 떨어져 상품의 레드향을 수확하기 어렵다. 1월 하순 이후에 수확하는 경우 당도가 떨어지기 시작하고, 레드향이 말라가기 시작한다. 최근에는 유황 등을 활용하여 장기간 저장할 수 있는 기술이 개발되고 있으나 일반 농가에 그 기술이 보급되기는 어려운 듯 하다.</blockquote>
-    
+    <p>운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에 병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류 품종이다</p>
+    <p>보통 '귤'이라고 부르는 감귤과 모양이 비슷하지만 크기가 더 크고 색이 붉어 <b>레드향</b>이란 이름이 지어졌다.</p>
+    <p>껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는 어린이와 나이 많은 노인들에게 안성맞춤인 품종이다</p>
+    <blockquote>비타민이 풍부해 피로회복,<br>
+        신진대사 촉진, 동맥경화 예방, <br>
+        콜레스테롤 수치 저하, <br>
+        <strong>항산화</strong> 등의 효능</blockquote>
+    <h2>레드향 샐러드 레시피</h2>
+    <h2>상품 구성</h2>
 </body>
-</html>
+</html>l
