--- a/CSS/05_universe_selector.html
+++ b/CSS/05_universe_selector.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품 소개 페이지</title>
     <style>
         /* 전체 선택자 : 모든 요소 */
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
