--- a/CSS/07_class_selector.html
+++ b/CSS/07_class_selector.html
@@ -1,57 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Class 선택자</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>클래스 선택자</title>
     <style>
-      p {
-        font-style: italic;
-      }
-    .accent{
-        background-color: silver;
-      }
-      .title{
-        border: 1px solid #000;
-        padding: 5px;
-      }
-      .bg{
-        background-color: #bbb;
-      }
+        p {
+            font-style:italic;
+        }
+        .accent{
+            background-color: greenyellow;
+        }
+        .title{
+            border: 1px solid #000;
+            padding: 5px;
+        }
+        .bg{
+            background-color: #bbb;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <h1 class="title bg">레드향</h1>
-    <p class="accent">
-      운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에
-      병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류
-      품종이다.[1]
-    </p>
-    <p >
-      보통 '귤'이라고 부르는 감귤과 모양이 비슷하지만 크기가 더 크고 색이 붉어
-      <span class="title">레드향</span>이란 이름이 지어졌다.
-    </p>
-    <p>
-      껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는
-      어린이와 나이 많은 노인들에게 안성맞춤인 품종이다.#
-    </p>
-
+    <p class="accent">껍질에 붉은 빛이 돌아 <span class="title">레드향</span>이라 불린다.</p>
+    <p>운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에 병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류 품종이다</p>
+    <p>껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는 어린이와 나이 많은 노인들에게 안성맞춤인 품종이다</p>    
+    
     <h1 class="title bg">블루베리</h1>
-    <p class="accent">
-      북아메리카를 비롯한 북반구 전역에 분포하는 식물 및 열매. 이름과 달리 딸기,
-      라즈베리, 블랙베리 등의 베리류와는 전혀 관계가 없는 진달래과 식물[1]이다.
-      꽃말은 현명과 친절이다.
-    </p>
-    <p>
-      넓게는 산앵도나무속(Vaccinium spp.)에 속한 여러 종들 중 검푸른 열매를 맺는
-      대부분의 식물들을 뭉뚱그려 블루베리라고 부르며, 동아시아가 원산지인
-      들쭉나무와 정금나무 및 지포나무, 유럽의 빌베리(bilberry)도 블루베리의
-      일종으로 간주된다. 물론 산앵도나무나 크랜베리(넌출월귤),
-      월귤(링곤베리)처럼 열매가 빨간 종들은 당연히 제외된다.
-    </p>
-    <p>
-      좁은 의미의 <span class="title">블루베리</span>는 북아메리카가 원산지인 재배종들을 가리킨다. 다만
-      이러한 재배종들도 학명 자체가 다른 경우가 많다.
-    </p>
-  </body>
+    <p class="accent">북아메리카를 비롯한 북반구 전역에 분포하는 식물 및 열매. 이름과 달리 딸기, 라즈베리, 블랙베리 등의 베리류와는 전혀 관계가 없는 진달래과 식물[1]이다.</p>
+    <p>이름은 <span class="title">블루베리(Blueberry)</span>지만, 파란색이 아닌 검은색에 가까운 어두운 남보라색이다.</p>
+    <p>100g당 식이섬유가 4.5g이 있고 칼슘, 철, 망간 등을 많이 함유한다.</p>
+</body>
 </html>
