--- a/CSS/09_group_selector.html
+++ b/CSS/09_group_selector.html
@@ -1,60 +1,38 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>id 선택자</title>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>그룹 선택자</title>
     <style>
-      #container {
-        width: 500px;
-        margin: 10px auto;
-        border: 1px solid #000;
-        background-color: yellowgreen;
-      }
-      h1, p{
-        text-align: center;
-      }
+        #container {
+            width: 500px;
+            margin: 10px auto;
+            padding: 10px;
+            border: 1px solid #000;
+            background-color: aliceblue;
+        }
+
+        h1,
+        p {
+            text-align: center;
+        }
     </style>
-    <!-- id는 맨 마지막에서만 적용된다. id는 한개만  -->
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="container">
-      <h1>레드향</h1>
-      <p>
-        운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에
-        병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류
-        품종이다.[1]
-      </p>
-      <p>
-        보통 '귤'이라고 부르는 감귤과 모양이 비슷하지만 크기가 더 크고 색이 붉어
-        레드향이란 이름이 지어졌다.
-      </p>
-      <p>
-        껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는
-        어린이와 나이 많은 노인들에게 안성맞춤인 품종이다.#
-      </p>
+        <h1>레드향</h1>
+        <p>껍질에 붉은 빛이 돌아 레드향이라 불린다.</p>
+        <p>운향과 귤속 재배식물로, 1991년 일본에서 서지향(C. 'Nishinokaori')에 병감(C. reticulata var poonensis)의 꽃가루를 교배해 개발한 만감류 품종이다</p>
+        <p>껍질이 얇아서 까기 쉬우며 과육이 부드럽고 당도가 높아 신맛을 싫어하는 어린이와 나이 많은 노인들에게 안성맞춤인 품종이다</p>
 
-      <h1>블루베리</h1>
-      <p>
-        북아메리카를 비롯한 북반구 전역에 분포하는 식물 및 열매. 이름과 달리
-        딸기, 라즈베리, 블랙베리 등의 베리류와는 전혀 관계가 없는 진달래과
-        식물[1]이다. 꽃말은 현명과 친절이다.
-      </p>
-      <p>
-        넓게는 산앵도나무속(Vaccinium spp.)에 속한 여러 종들 중 검푸른 열매를
-        맺는 대부분의 식물들을 뭉뚱그려 블루베리라고 부르며, 동아시아가 원산지인
-        들쭉나무와 정금나무 및 지포나무, 유럽의 빌베리(bilberry)도 블루베리의
-        일종으로 간주된다. 물론 산앵도나무나 크랜베리(넌출월귤),
-        월귤(링곤베리)처럼 열매가 빨간 종들은 당연히 제외된다.
-      </p>
-      <p>
-        좁은 의미의 블루베리는 북아메리카가 원산지인 재배종들을 가리킨다. 다만
-        이러한 재배종들도 학명 자체가 다른 경우가 많다.
-      </p>
+        <h1>블루베리</h1>
+        <p>북아메리카를 비롯한 북반구 전역에 분포하는 식물 및 열매. 이름과 달리 딸기, 라즈베리, 블랙베리 등의 베리류와는 전혀 관계가 없는 진달래과 식물[1]이다.</p>
+        <p>이름은 블루베리(Blueberry)지만, 파란색이 아닌 검은색에 가까운 어두운 남보라색이다.</p>
+        <p>100g당 식이섬유가 4.5g이 있고 칼슘, 철, 망간 등을 많이 함유한다.</p>
     </div>
-  </body>
-</html>
+</body>
 
-<!-- padding -> 텍스트의영역의 공간 -->
-<!-- border -> padding과 margin의 사이 -->
-<!-- margin -> 텍스트영역의 바깥 공간  -->
+</html>
