--- a/HTML/10_ol_list_type.html
+++ b/HTML/10_ol_list_type.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>상품 소개 페이지</title>
+    <title>Blueberry</title>
 </head>
 <body>
     <!-- <ol></ol> : order list , 순서있는 리스트 -->
@@ -18,41 +18,5 @@
         <li>킹크랩 맛의 게살은 어슷썰어요.</li>
         <li>완성 접시에 양상추, 상추, 양배추, 적양파, 당근 등을 켜켜로 보기좋게 담아요.</li>
     </ol>
-    <img src="https://recipe1.ezmember.co.kr/cache/recipe/2022/06/23/e77f6ec12aeff19443adabf6eef7d7661.jpg" width="250px">
-    <hr>
-    <h2>상품 구성</h2>
-    <table>
-        <caption>선물용과 가정용 상품 구성</caption>
-        <tr>
-            <th>용도</th>
-            <th>중량</th>
-            <th>갯수</th>
-            <th>가격</th>
-        </tr>
-        <tr>
-            <td>선물용</td>
-            <td>3Kg</td>
-            <td>11~16과</td>
-            <td>35,000원</td>
-        </tr>
-        <tr>
-            <td>선물용</td>
-            <td>5Kg</td>
-            <td>18~16과</td>
-            <td>52,000원</td>
-        </tr>
-        <tr>
-            <td>가정용</td>
-            <td>3Kg</td>
-            <td>11~16과</td>
-            <td>30,000원</td>
-        </tr>
-        <tr>
-            <td>가정용</td>
-            <td>5Kg</td>
-            <td>18~26과</td>
-            <td>47,000원</td>
-        </tr>
-    </table>
 </body>
 </html>
