--- a/HTML/20_embed.html
+++ b/HTML/20_embed.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mp3 파일 삽입 하기</title>
+    <title>mp3 파일 삽입하기</title>
 </head>
 <body>
     <embed src="../medias/spring.mp3">
