--- a/HTML/25_fieldset.html
+++ b/HTML/25_fieldset.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,8 @@
             <legend>상품 선택</legend>
         </fieldset>
         <fieldset>
-            <legend>포장 선택</legend>
+            <legend>배송 정보</legend>
         </fieldset>
-
     </form>
 </body>
 </html>
