--- a/HTML/26_label.html
+++ b/HTML/26_label.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>레드향 주문하기</title>
-  </head>
-  <body>
-    <h1>레드향 주문하기</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <form>
-      <fieldset>
         <label for="user-id">아이디(6자이상)</label>
         <input type="text" id="user-id">
     </form>
-  </body>
+</body>
 </html>
