--- a/HTML/27_login.html
+++ b/HTML/27_login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>레드향 주문하기</title>
-  </head>
-  <body>
-    <h1>레드향 주문하기</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <form>
-      <fieldset>
-        <label>아이디: <input type="text" id="user-id" size="10"></label>
-        <label>비밀번호: <input type="password" id="user-pw" size="10"></label>
-        <input type="submit" value="로그인">
+        <fieldset>
+            <label>아이디: <input type="text" id="user_id" size="10"></label>
+            <label>비밀번호: <input type="text" id="user_pw" size="10"></label>
+            <input type="submit" value="로그인">
         </fieldset>
     </form>
-  </body>
+</body>
 </html>
