--- a/HTML/36_hidden.html
+++ b/HTML/36_hidden.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>로그인</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>로그인</title>
 </head>
 <body>
-  <form action="login.jsp" method="post">
-    <fieldset>
-      <input type="hidden" name="url" id="url" value="사이트를 통한 직업 로그인">
-      <label>아이디: <input type="text" name="uid" id="user-id"></label>
-      <label>비밀번호: <input type="password" name="upwd" id="user-pwd"></label>
-      <input type="submit" value="로그인">
-    </fieldset>
-  </form>
+    <!-- hidden은 화면에는 보이지 않고, 서버로는 전달되는 요소 -->
+    <form action="login.jsp" method="post">
+        <fieldset>
+            <input name="direct" type="hidden" name="url" id="url" value="사이트를 통한 직접 로그인">
+            <label>아이디: <input name="uid" type="text" id="user_id" size="10"></label>
+            <label>비밀번호: <input name="upwd" type="password" id="user_pw" size="10"></label>
+            <input type="submit" value="로그인">
+        </fieldset>
+    </form>
 </body>
 </html>
