웹사이트 만들기 4~14 폴더 생성 스타일 점진적으로 적용

--- a/WCBCafe/08/index.html
+++ b/WCBCafe/08/index.html
@@ -14,7 +14,7 @@
     <title>WCB Cafe</title>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header wrapper">
       <h1><a href="index.html"><img class="logo" src="../../siteimages/logo.svg" alt="WCB 카페 홈"></a></h1>
       <nav>
         <ul class="main-nav">
