--- a/WCBCafe/10/index.html
+++ b/WCBCafe/10/index.html
@@ -14,7 +14,7 @@
     <title>WCB Cafe</title>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header wrapper">
       <h1><a href="index.html"><img class="logo" src="../../siteimages/logo.svg" alt="WCB 카페 홈"></a></h1>
       <nav>
         <ul class="main-nav">
@@ -24,7 +24,10 @@
         </ul>
       </nav>
     </header>
-    <section></section>
-    <footer></footer>
+    <div class="home-content wrapper">
+      <h2 class="page-title">We'll Make Yore Day</h2>
+      <p>멋진 카페에서 힐링 시간을 가지세요. 첨가물을 넣지 않은 재료로 건강한 음식을 만듭니다.</p>
+      <a class="button" href="menu.html">메뉴 보기</a>
+    </div>
   </body>
 </html>
