반응형 웹 완성

--- a/WCBCafe/62/contact.html
+++ b/WCBCafe/62/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WCB Cafe - MENU</title>
+    <title>WCB Cafe - CONTACT</title>
 
     <link rel="icon" type="image/png" href="../../siteimages/favicon.png">
 
@@ -37,50 +37,55 @@
             <h2 class="page-title">Contact</h2>
             <form action="#">
                 <div>
-                    <label for="name">Name</label>
+                    <label for="name">이름</label>
                     <input type="text" id="name" name="your-name">
                 </div>
                 <div>
-                    <label for="email">EMail</label>
+                    <label for="email">메일 주소</label>
                     <input type="email" id="email" name="your-email">
                 </div>
                 <div>
-                    <label for="message">Message</label>
-                    <textarea name="your-message"></textarea>
+                    <label for="message">메시지</label>
+                    <textarea id="message" name="your-message"></textarea>
                 </div>
+
                 <input type="submit" class="button" value="전송">
             </form>
         </div>
 
     </div> <!-- /#menu -->
 
-    <section id="location"> 
+    <section id="location">
         <div class="wrapper">
             <div class="location-info">
                 <h3 class="sub-title">카페 강남비트캠프점</h3>
                 <p>
-                    주소 :  서울 강남구 강남대로94길 20<br>
+                    주소 : 서울 강남구 강남대로94길 20<br>
                     삼오빌딩 7층<br>
-                    전화번호 : 02-3431-1231<br>
+                    전화번호 : 02-3486-4600<br>
                     영업시간 : 09:00 ~ 22:00<br>
-                    휴무일 : 연중무휴<br>
+                    휴무일 : 매주 화요일
                 </p>
             </div>
             <div class="location-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.360285733388!2d127.02645057574756!3d37.49941982797408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca194d4bb162f%3A0x9612cf895f23eaca!2z67mE7Yq47Lqg7ZSEIOqwleuCqOuzuOybkA!5e0!3m2!1sko!2skr!4v1709707614979!5m2!1sko!2skr" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35799.901099154966!2d126.99122613009443!3d37.52456387269132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca15aee9ab0cb%3A0x31793fc63e0cf9d3!2z67mE7Yq47Lqg7ZSE!5e0!3m2!1sko!2skr!4v1709707618933!5m2!1sko!2skr" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
+
     <section id="sns">
         <div class="wrapper">
             <div class="sns-box">
-                <h3 class="sub-title">FaceBook<br><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fstarbuckskorea%2F%3Flocale%3Dko_KR&tabs=timeline&width=340&height=315&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"  style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></h3>
+                <h3 class="sub-title">Facebook</h3>
+
             </div>
             <div class="sns-box">
-                <h3 class="sub-title">Twitter<blockquote class="twitter-tweet" data-media-max-width="640px"><a href="https://t.co/O7wTIoWdTq"></a> <a href="https://twitter.com/StarbucksKorea/status/1217676104606945280?ref_src=twsrc%5Etfw"></a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></h3>
+                <h3 class="sub-title">Twitter</h3>
+                
             </div>
             <div class="sns-box">
-                <h3 class="sub-title">YouTube<iframe src="https://www.youtube.com/embed/hF3Tdpy3yRc" title="[스벅TV] 최초공개! 스타벅스 카카오프렌즈 마이버디 MD 전 상품 언박싱" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></h3>
+                <h3 class="sub-title">Youtube</h3>
+                
             </div>
         </div>
     </section>
