--- a/JS/_04_function/_19_foreach.html
+++ b/JS/_04_function/_19_foreach.html
@@ -7,16 +7,11 @@
 </head>
 <body>
     <script>
-        let numbers = [273, 52, 101, 32, 47];
+        let number = [23]
+/*
 
-        /*
-        map()은 콜백 함수에서 리턴한 값들을 기반으로 새로운 배열을 만드는 함수 배열의 값을 가공하는 함수
-        */
-        numbers = numbers.map((v,i,a)=>{
-            return v * v;
-        });
-console.log(numbers);
-        numbers.forEach(console.log);
+*/
+
     </script>
 </body>
 </html>
