물고기 이동하기 랜덤으로 이동하기 예제 문제 생성

--- a/JS/_04_function/question/_03_timer_restart.html
+++ b/JS/_04_function/question/_03_timer_restart.html
@@ -35,7 +35,7 @@
                 btnBoolean = !btnBoolean;
                 console.log("btnBoolean = " + btnBoolean);
                     if(btnBoolean == true){
-                        btnClass.textContent = "종료";
+                        btnClass.textContent = "멈춤";
                          timeStart = setInterval(()=>{
                             timeDivClass.textContent = timeCount;
                             timeCount++;
