--- a/JS/_08_object/_12_prototype.html
+++ b/JS/_08_object/_12_prototype.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script>
-        const i = 'hello';
-        console.log(i.indexOf("he")); // 0      string -> String
-        console.log(i.indexOf("ll")); // 2
-        console.log(i.indexOf("wow")); // -1
+        const i = '안녕하세요';
+        console.log(i.indexOf('안녕'));     // string -> String
+        console.log(i.indexOf('하세'));
+        console.log(i.indexOf('korea'));
 
-        const j = [1,2,3];
-        console.log(j.indexOf(2));    // 1
-        console.log(j.indexOf(3));    // 2
-        console.log(j.indexOf(1000)); // -1
+        const j = [1, 2, 3];
+        console.log(j.indexOf(2));
+        console.log(j.indexOf(3));
+        console.log(j.indexOf(100));
 
         String.prototype.contain = function(data){
             return this.indexOf(data) >= 0;
@@ -25,14 +23,16 @@
             return this.indexOf(data) >= 0;
         }
 
-        const a = "hello";
-        console.log('he in hello :' , a.contain('he')  ); // he in hello : true
-        console.log('wow in hello :' , a.contain('wow')  ); // wow in hello : false
+        const a = '안녕하세요';
+        console.log('안녕 in 안녕하세요 : ', a.contain('안녕'));
+        console.log('korea in 안녕하세요 : ', a.contain('korea'));
 
-        const b = [273,32,123,21,5];
-        console.log('273 in b :' , b.contain(273)  ); // 273 in b : true
-        console.log('12312123 in b :' , b.contain(12312123)  ); // 12312123 in b : false
-
+        const b = [273, 32, 103, 75, 33];
+        console.log('103 in b : ' + b.contain(103));
+        console.log('100 in b : ' + b.contain(100));
     </script>
+</head>
+<body>
+    
 </body>
 </html>
