--- a/JS/_08_object/_13_Number.html
+++ b/JS/_08_object/_13_Number.html
@@ -4,45 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script>
         const i = 123.456789;
 
-        console.log(i.toFixed(2)); // 123.46
-        console.log(i.toFixed(3)); //123.457
-        console.log(i.toFixed(4)); //123.4568
-
-
-        const m = Number('korea');
-        console.log(m); //NaN
-        console.log(m == NaN); // false                 --- why?
-        console.log( Number.isNaN(m) ); //true
+        console.log(i.toFixed(2));
+        console.log(i.toFixed(3));
+        console.log(i.toFixed(4));
         console.log('');
 
-        const n = 10 / 0;
-        console.log(n); // Infinity
-        const o = -10 / 0;
-        console.log(o); // -Infinity
+        const m = Number('korea');      // 'korea' -> 숫자로 변환 시도
+        console.log(m);                 // NaN : Not a Number
+        console.log(m === NaN);         // 비교 안됨, 결과값 false
+        console.log(Number.isNaN(m));   // 결과값 true, 숫자인지 아닌지 판단
         console.log('');
 
-        console.log(Number.isFinite(n)); // false : 유한한지 확인 -> 유한하지 않음
-        console.log(Number.isFinite(o)); // false : 유한한지 확인 -> 유한하지 않음
-        console.log(Number.isFinite(1)); // true : 유한함
-        console.log( n === Infinity ); // true
-        console.log( o === -Infinity ); // ture
+        const n = 10 / 0;               // Infinity, 무한대
+        console.log(n);
+        const o = -10 / 0;              // -Infinity
+        console.log(o);
+        console.log(Number.isFinite(n));    // 결과값 false, 값이 유한한가
+        console.log(Number.isFinite(o));    // 결과값 false
+        console.log(Number.isFinite(1));    // 결과값 true
+        console.log(Number.isFinite(10));   // 결과값 true
+        console.log(n === Infinity);
+        console.log(o === -Infinity);
         console.log('');
 
-        const stringA = `
-        줄 바
-        꿈
-        `;
-        const stringB = `    앞 뒤 공백         ㅇ       `
-        console.log(stringA); // 줄바꿈이 적용되어 출력
-
-        console.log( stringA.trim() ); // 개행문자가 사라짐 : 문자와 문자 사이는 해당하지 않음
-        console.log( stringB.trim() ); // 공백문자가 사라짐 : 문자와 문자 사이는 해당하지 않음
-
-    </script>
+    </script>   
+</head>
+<body>
+    
 </body>
 </html>
