--- a/JS/_08_object/_22_deep_copy.html
+++ b/JS/_08_object/_22_deep_copy.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script>
         /*
-            깊은 복사
-
+        [깊은 복사]
         */
-        const foodArray = ["milk", "bread"];
-        const foods = [...foodArray]; // 전개 연산자를 이용해서 새로운 배열을 생성
-        foodArray.push("ramen");
-        foods.push('banana');
+        const foodArray = ['우유', '식빵'];
+        const foods = [...foodArray];        // 전개 연산자를 사용해서 새로운 배열을 생성
+        foodArray.push('라면');
+        foods.push('바나나');
 
-        console.log(foodArray); //["milk", "bread","ramen"];
-        console.log(foods);   //["milk", "bread","banana"];
+        console.log(foodArray);
+        console.log(foods);
     </script>
+</head>
+<body>
+    
 </body>
 </html>
