--- a/JS/_08_object/question/_01_change_image.html
+++ b/JS/_08_object/question/_01_change_image.html
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <style>
-    .banner1 {
-      width: 400px;
-      height: 200px;
-      top: 10px;
-      left: 100px;
-      position: absolute;
-      border: 3px solid red;
-      box-shadow: 10px 10px #ccc;
-    }
-  </style>
-  <!-- <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        let banner = function(selector, imageList, cb, set, speed){
-            let currentIndex = 1;
-
+    <style>
+        .banner {
+            width: 400px;
+            height: 200px;
+            top: 10px;
+            left: 100px;
+            position: absolute;
+            border: 3px solid red;
+            box-shadow: 10px 10px #ccc;
         }
-        let timerID = null;
-        let speed = 1000;
-        let imageList = [
-            'logo_01.jpg', 'logo_02.jpg', 'logo_03.jpg' , 'logo_04.jpg', 'logo_05.jpg', 'logo_06.jpg',
-            'logo_07.jpg', 'logo_08.jpg'
-        ];
-
-        timerID = banner('#banner1',imageList,()=>speed);
-        document.addEventListener()
-    }
-  </script> -->
-  <body>
-    <img src="../../../images2/logo_01.jpg" alt="logo01" class="banner1" />
-
+    </style>
     <script>
-      /*
-        타이머를 동작시켜서 logo_01.jpg~ logo_08로 교체하도록 만든다.
+        /*
+        1초단위로 타이머를 동작시켜서 logo_01.jpg ~ logo_08.jpg로 교체하도록 만듭니다.
         단, 방향키 상을 누르면 교체 속도가 빨라지고
-        방향키 하를 누르면 교체 속도가 느려지게 된다.
+        방향키 하를 누르면 교체 속도가 느려지게 됩니다.
         */
-      document.addEventListener("DOMContentLoaded", function () {
-        let changeImg = document.querySelector(".banner1");
-        let second = 1001;
-        let imgCount = 1;
-        let imgSpeed = 100;
+        let banner = function (selector, imgList, cb_set_speed) {
+            let currentIndex = 1;
+            let $banner = document.querySelector(selector);
+            let speed = cb_set_speed();
+            let timerID = null;
 
-        let timer = setInterval(img, second);
+            timerID = setInterval(() => {
+                let imgName = imgList[currentIndex++];
+                $banner.setAttribute('src', '../../../images2/' + imgName);
 
-        window.addEventListener("keydown", (e) => {
-          if (!(second <= 100)) {
-            if (e.key.indexOf("ArrowDown") > -1) {
-              second -= +imgSpeed;
-              clearInterval(timer);
-              timer = setInterval(img,second);
-            } else if (e.key == "ArrowUp") {
-                second += +imgSpeed;
-                clearInterval(timer);
-                timer = setInterval(img,second);
-            }else if(e.key == "Escape"){
-                clearInterval(timer);
-            }
-          } else {
-            second += 100;
-          }
-        });
+                if (currentIndex >= imgList.length)
+                    currentIndex = 0;
+            }, speed);
 
-       
-
-        function img() {
-          if (imgCount < 9) {
-            changeImg.setAttribute("src",`../../../images2/logo_0${imgCount}.jpg`);
-          } else {
-            imgCount = 0;
-          }
-          imgCount++;
+            return timerID;
         }
-      });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            let timerID = null;
+            let speed = 1000;       // 1초
+            let imageList = [
+                'logo_01.jpg', 'logo_02.jpg', 'logo_03.jpg', 'logo_04.jpg',
+                'logo_05.jpg', 'logo_06.jpg', 'logo_07.jpg', 'logo_08.jpg'
+            ];
+
+            timerID = banner('#banner1', imageList, () => speed);
+
+            document.addEventListener('keydown', function (e) {
+                let isChange = false;
+                const UP_KEY = 38, DOWN_KEY = 40;
+                const CHANGE_SPEED = 100;
+                const MIN_SPEED = 100, MAX_SPEED = 2000;
+
+                switch (e.keyCode) {
+                    case UP_KEY:
+                        speed -= CHANGE_SPEED;
+                        speed = speed < MIN_SPEED ? MIN_SPEED : speed;
+                        isChange = true;
+                        break;
+                    case DOWN_KEY:
+                        speed += CHANGE_SPEED;
+                        speed = speed > 2000 ? 2000 : speed;
+                        isChange = true;
+                        break;
+                }
+                if(isChange){
+                    clearInterval(timerID);
+                    timerID = banner('#banner1', imageList, ()=>speed);
+                }
+            });
+        });
     </script>
-  </body>
+</head>
+
+<body>
+    <img src="../../../images2/logo_01.jpg" class="banner" id="banner1" />
+</body>
+
 </html>
