--- a/JS/_11_exception/_03_no_element.html
+++ b/JS/_11_exception/_03_no_element.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script>
-        document.addEventListener("DOMContentLoaded",function(){
-            
-            // document.createElement("h1");
+        document.addEventListener('DOMContentLoaded', ()=>{
             const h1 = document.querySelector('h1');
 
             // 과거의 'C'언어에서 에러를 확인하던 방식
             if(h1)
-                h1.textContent = "안녕";
+                h1.textContent = '안녕하세요';
             else
-                console.log("h1 태그를 추출할 수 없습니다.");
+                console.log('h1 태그를 추출할 수 없습니다.');
         });
     </script>
+</head>
+<body>
+    
 </body>
 </html>
